所有静态页面更新0823

--- a/src/view/hkb_collection/hkb_collection.ejs
+++ b/src/view/hkb_collection/hkb_collection.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <%- include('../../component/common/metaNormal.ejs') %>
-    <title>商户注册</title>
+    <title>收款失败</title>
 </head>
 <body style="background: #fff">
 
-<%-include('../../component/hkb_register/hkb_main_register.ejs')%>
+<%-include('../../component/hkb_collection/hkb_main_collection.ejs')%>
 
 
 </body>
