--- a/src/view/hkb_earning/hkb_earning.ejs
+++ b/src/view/hkb_earning/hkb_earning.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <%- include('../../component/common/metaNormal.ejs') %>
-    <title>商户注册</title>
+    <title>收款成功</title>
 </head>
 <body style="background: #fff">
 
-<%-include('../../component/hkb_register/hkb_main_register.ejs')%>
+<%-include('../../component/hkb_earning/hkb_main_earning.ejs')%>
 
 
 </body>
