--- a/src/view/hkb_refund/hkb_refund.ejs
+++ b/src/view/hkb_refund/hkb_refund.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <%- include('../../component/common/metaNormal.ejs') %>
-    <title>商户注册</title>
+    <title>退款成功</title>
 </head>
 <body style="background: #fff">
 
-<%-include('../../component/hkb_register/hkb_main_register.ejs')%>
+<%-include('../../component/hkb_refund/hkb_main_refund.ejs')%>
 
 
 </body>
