支付成功失败动画更新0824

--- a/src/component/hkb_collection/collection_succeed.ejs
+++ b/src/component/hkb_collection/collection_succeed.ejs
@@ -3,7 +3,13 @@
 
     <!--动画-->
     <div class="collection_succeed_animation">
-        <img src="../../icon/succeed-1.png">
+        <div class="fail_animation">
+            <div class="spinner"><i></i></div>
+            <div class="wrong">
+                <span class="line left"></span>
+                <span class="line right"></span>
+            </div>
+        </div>
         <div class="collection_succeed_text">收款失败</div>
 
     </div>
