--- a/src/component/hkb_earning/earning_win.ejs
+++ b/src/component/hkb_earning/earning_win.ejs
@@ -3,7 +3,14 @@
 
     <!--动画-->
     <div class="earning_cartoon">
-        <img src="../../icon/succeed-2.png">
+        <div class="success_animation">
+            <div class="spinner"><i></i></div>
+            <div class="right">
+                <span class="line tip"></span>
+                <span class="line long "></span>
+            </div>
+        </div>
+        <!--<img src="../../icon/succeed-2.png">-->
         <div class="earning_circle">收款成功</div>
 
     </div>
