--- a/src/component/hkb_refund/refund_quit.ejs
+++ b/src/component/hkb_refund/refund_quit.ejs
@@ -3,7 +3,15 @@
 
     <!--动画-->
     <div class="refund_triumph_module">
-        <img src="../../icon/succeed-2.png">
+        <!-- 成功动画-->
+        <div class="success_animation">
+            <div class="spinner"><i></i></div>
+            <div class="right">
+                <span class="line tip"></span>
+                <span class="line long "></span>
+            </div>
+        </div>
+
         <div class="refund_triumph_text">退款成功</div>
 
     </div>
