--- a/src/component/hkb_collection/collection_succeed.less
+++ b/src/component/hkb_collection/collection_succeed.less
@@ -2,15 +2,93 @@
   text-align: center;
 
   .collection_succeed_animation{
-    img{
-      height: 100px;
-      width: 100px;
-      padding-top: 40px;
+
+    .fail_animation{
+      position: relative;
+
+      .spinner {
+        position: relative;
+        font-size: 60px;
+        width: 2em;
+        height: 2em;
+        margin: 60px auto 10px auto;
+        border-radius: 50%;
+        box-shadow: inset 0 0 0 .1em rgba(240,148,45,.2);
+        i{
+          position: absolute;
+          top: 0;
+          left: 0;
+          clip: rect(0, 2em, 2em, 1em);
+          width: 2em;
+          height: 2em;
+          animation: spinner-circle-clipper 2s ease-in-out infinite;
+          @keyframes spinner-circle-clipper {
+            0% {
+              transform: rotate(0deg);
+            }
+
+            100% {
+              transform: rotate(180deg);
+            }
+          }
+        }
+      }
+
+      .spinner i:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        clip: rect(0, 2em, 2em, 1em);
+        width: 2em;
+        height: 2em;
+        content: '';
+        animation: spinner-circle 2s ease-in-out infinite;
+        border-radius: 50%;
+        box-shadow: inset 0 0 0 .1em #f0942d;
+        @keyframes spinner-circle {
+          0% {
+            transform: rotate(-180deg);
+          }
+
+          100% {
+            transform: rotate(180deg);
+          }
+        }
+      }
+
+      .wrong{
+        position: absolute;
+        top: 10px;
+        left: calc(~'(100vw - 100px)/2');
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background:#f0942d;
+        .line{
+          position: absolute;
+          height: 5px;
+          width: 47px;
+          background-color: #fff;
+          display: block;
+          top: 47px;
+          border-radius: 2px;
+        }
+        .left{
+          transform: rotate(45deg);
+          left: 27px;
+        }
+        .right{
+          transform: rotate(-45deg);
+          right: 27px;;
+        }
+
+      }
     }
 
     .collection_succeed_text{
       font-size: 16px;
       padding-top: 10px;
+      font-weight: bold;
 
     }
 
@@ -25,6 +103,7 @@
     background: #f5f5f9;
     border-radius: 5px;
     margin-bottom: 30px;
+
 
     .hkb_fail_bill{
 
