--- a/src/component/hkb_refund/refund_quit.less
+++ b/src/component/hkb_refund/refund_quit.less
@@ -2,15 +2,99 @@
   text-align: center;
 
   .refund_triumph_module{
-    img{
-      height: 100px;
-      width: 100px;
-      padding-top: 40px;
+
+    .success_animation{
+      position: relative;
+
+      .spinner {
+        position: relative;
+        font-size: 60px;
+        width: 2em;
+        height: 2em;
+        margin: 60px auto 10px auto;
+        border-radius: 50%;
+        box-shadow: inset 0 0 0 .1em rgba(165,220,134,.2);
+        i{
+          position: absolute;
+          top: 0;
+          left: 0;
+          clip: rect(0, 2em, 2em, 1em);
+          width: 2em;
+          height: 2em;
+          animation: spinner-circle-clipper 2s ease-in-out infinite;
+          @keyframes spinner-circle-clipper {
+            0% {
+              transform: rotate(0deg);
+            }
+
+            100% {
+              transform: rotate(180deg);
+            }
+          }
+        }
+      }
+
+      .spinner i:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        clip: rect(0, 2em, 2em, 1em);
+        width: 2em;
+        height: 2em;
+        content: '';
+        animation: spinner-circle 2s ease-in-out infinite;
+        border-radius: 50%;
+        box-shadow: inset 0 0 0 .1em #8abc23;
+        @keyframes spinner-circle {
+          0% {
+            transform: rotate(-180deg);
+          }
+
+          100% {
+            transform: rotate(180deg);
+          }
+        }
+      }
+
+      .right{
+        position: absolute;
+        top: 10px;
+        left: calc(~'(100vw - 100px)/2');
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background:#8abc23;
+        .line{
+          height: 5px;
+          background-color: #fff;
+          display: block;
+          border-radius: 2px;
+          position: absolute;
+          z-index: 2;
+        }
+        .tip{
+          width: 25px;
+          left: 21px;
+          top: 56px;
+          -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+        }
+        .long{
+          width: 47px;
+          right: 21px;
+          top: 48px;
+          -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+        }
+
+      }
     }
 
     .refund_triumph_text{
       font-size: 16px;
       padding-top: 10px;
+      padding-top: 10px;
+      font-weight: bold;
 
     }
 
