--- a/src/component/hkb_collection/collection_succeed.ejs
+++ b/src/component/hkb_collection/collection_succeed.ejs
@@ -39,7 +39,7 @@
 
 
     <!--按钮-->
-    <a class="collection_succeed_button" href="../hkb_transaction/hkb_transaction.html">
+    <a class="collection_succeed_button" href="#">
         <span class="succeed_key" >确定</span>
     </a>
 
