--- a/src/component/hkb_staff/staff_status.ejs
+++ b/src/component/hkb_staff/staff_status.ejs
@@ -84,7 +84,7 @@
         <div class="hkb_staff_status_btn">
 
 
-            <a class="status_btn" href="../hkb_service/hkb_service.html">返回</a>
+            <a class="status_btn" href="#">返回</a>
 
 
         </div>
