--- a/src/component/hkb_transaction/transaction_record.ejs
+++ b/src/component/hkb_transaction/transaction_record.ejs
@@ -108,7 +108,7 @@
 <div class="hkb_transaction_background">
 
 
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left" href="../hkb_bill/hkb_bill.html">
 
             <img src="../../icon/store-3.png">
 
@@ -135,10 +135,10 @@
 
 
 
-        </div>
+        </a>
 
 
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left" href="../hkb_bill/hkb_bill.html">
 
         <img src="../../icon/store-3.png">
 
@@ -165,10 +165,10 @@
 
 
 
-    </div>
+    </a>
 
 
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left" href="../hkb_back/hkb_back.html">
 
         <img src="../../icon/store-4.png">
 
@@ -195,39 +195,10 @@
 
 
 
-    </div>
+    </a>
 
 
-    <div class="transaction_title_6 hkb_alignment_left">
-
-        <img src="../../icon/store-3.png">
-
-        <div class="detailed_list hkb_alignment_center">
-
-            <div>
-
-                <p>已收款</p>
-
-                <p>手机：130****2349</p>
-
-            </div>
-
-            <div>
-
-                <p>¥239.00</p>
-
-                <p>2017-06-23 10:05</p>
-
-            </div>
-
-        </div>
-
-
-
-
-    </div>
-
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left" href="../hkb_bill/hkb_bill.html">
 
         <img src="../../icon/store-3.png">
 
@@ -254,10 +225,9 @@
 
 
 
-    </div>
+    </a>
 
-
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left" href="../hkb_bill/hkb_bill.html">
 
         <img src="../../icon/store-3.png">
 
@@ -284,10 +254,40 @@
 
 
 
-    </div>
+    </a>
 
 
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left">
+
+        <img src="../../icon/store-3.png">
+
+        <div class="detailed_list hkb_alignment_center">
+
+            <div>
+
+                <p>已收款</p>
+
+                <p>手机：130****2349</p>
+
+            </div>
+
+            <div>
+
+                <p>¥239.00</p>
+
+                <p>2017-06-23 10:05</p>
+
+            </div>
+
+        </div>
+
+
+
+
+    </a>
+
+
+    <a class="transaction_title_6 hkb_alignment_left">
 
         <img src="../../icon/store-4.png">
 
@@ -314,10 +314,10 @@
 
 
 
-    </div>
+    </a>
 
 
-    <div class="transaction_title_6 hkb_alignment_left">
+    <a class="transaction_title_6 hkb_alignment_left">
 
         <img src="../../icon/store-3.png">
 
@@ -344,7 +344,7 @@
 
 
 
-    </div>
+    </a>
 
 
 
