--- a/src/component/hkb_transaction/transaction_record.less
+++ b/src/component/hkb_transaction/transaction_record.less
@@ -177,6 +177,7 @@
       position: relative;
       padding: 15px;
       font-size: 14px;
+    color: #4a4a4a;
 
       img {
         display: block;
@@ -216,6 +217,9 @@
       }
     &:last-child:after{
       border-bottom: none;
+    }
+    &:active{
+      background: #f1f1f1;
     }
 
     }
