--- a/src/component/hkb_service/service_relation.ejs
+++ b/src/component/hkb_service/service_relation.ejs
@@ -48,7 +48,7 @@
 
 <div class="hkb_service_relation_area">
 
-    <a class="service_relation_btn" href="../hkb_register/hkb_register.html">返回</a>
+    <a class="service_relation_btn" href="#">返回</a>
 
 </div>
 
